Use Small Viewport instead of Dynamic Viewport to avoid layout shifting when scrolling on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  min-height: 100dvh;
+  min-height: 100svh;
   position: relative;
 }
 
